--- a/Shopping_Buy_All/Shopping_Buy_All/Estadisticas/Ventanas_Estadisticas/EstadisticasRecaudacion/RecaudacionPorProducto/RecaudacionPorProducto.rdlc
+++ b/Shopping_Buy_All/Shopping_Buy_All/Estadisticas/Ventanas_Estadisticas/EstadisticasRecaudacion/RecaudacionPorProducto/RecaudacionPorProducto.rdlc
@@ -7,7 +7,7 @@
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>969caacc-8763-412f-b54b-199bb8593d45</rd:DataSourceID>
+      <rd:DataSourceID>6ca88c6a-8b71-400b-8012-adfa1bf60ff6</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
@@ -17,8 +17,8 @@
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
-        <Field Name="Mes">
-          <DataField>Mes</DataField>
+        <Field Name="NombreProducto">
+          <DataField>NombreProducto</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="TotalRecaudado">
@@ -29,7 +29,7 @@
       <rd:DataSetInfo>
         <rd:DataSetName>DatosRecaudacion</rd:DataSetName>
         <rd:SchemaPath>D:\Lean\Facultad\Programación de Aplicaciones Visuales I\LONGO\Pav_TPI\Pav_TPI\Shopping_Buy_All\Shopping_Buy_All\Estadisticas\Ventanas_Estadisticas\EstadisticasRecaudacion\DatosRecaudacion.xsd</rd:SchemaPath>
-        <rd:TableName>RecaudacionPorMes</rd:TableName>
+        <rd:TableName>RecaudacionPorProducto</rd:TableName>
         <rd:TableAdapterFillMethod />
         <rd:TableAdapterGetDataMethod />
         <rd:TableAdapterName />
@@ -40,6 +40,16 @@
     <ReportSection>
       <Body>
         <ReportItems>
+          <Line Name="Line1">
+            <Top>1.37266cm</Top>
+            <Height>0cm</Height>
+            <Width>17.145cm</Width>
+            <Style>
+              <Border>
+                <Style>Solid</Style>
+              </Border>
+            </Style>
+          </Line>
           <Textbox Name="Textbox1">
             <CanGrow>true</CanGrow>
             <KeepTogether>true</KeepTogether>
@@ -47,7 +57,18 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Recaudacion Mensual</Value>
+                    <Value>Recaudacion por producto</Value>
+                    <Style>
+                      <FontSize>20pt</FontSize>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value />
                     <Style>
                       <FontSize>20pt</FontSize>
                     </Style>
@@ -57,9 +78,10 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox1</rd:DefaultName>
-            <Top>0.08792cm</Top>
-            <Height>1.20865cm</Height>
-            <Width>18cm</Width>
+            <Top>0.29959cm</Top>
+            <Height>0.89668cm</Height>
+            <Width>17.145cm</Width>
+            <ZIndex>1</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -70,32 +92,21 @@
               <PaddingBottom>2pt</PaddingBottom>
             </Style>
           </Textbox>
-          <Line Name="Line1">
-            <Top>1.47296cm</Top>
-            <Height>0cm</Height>
-            <Width>18cm</Width>
-            <ZIndex>1</ZIndex>
-            <Style>
-              <Border>
-                <Style>Solid</Style>
-              </Border>
-            </Style>
-          </Line>
           <Chart Name="Chart1">
             <ChartCategoryHierarchy>
               <ChartMembers>
                 <ChartMember>
                   <Group Name="Chart1_CategoryGroup">
                     <GroupExpressions>
-                      <GroupExpression>=Fields!Mes.Value</GroupExpression>
+                      <GroupExpression>=Fields!NombreProducto.Value</GroupExpression>
                     </GroupExpressions>
                   </Group>
                   <SortExpressions>
                     <SortExpression>
-                      <Value>=Fields!Mes.Value</Value>
+                      <Value>=Fields!NombreProducto.Value</Value>
                     </SortExpression>
                   </SortExpressions>
-                  <Label>=Fields!Mes.Value</Label>
+                  <Label>=Fields!NombreProducto.Value</Label>
                 </ChartMember>
               </ChartMembers>
             </ChartCategoryHierarchy>
@@ -159,7 +170,7 @@
                       <Color>#5c5c5c</Color>
                     </Style>
                     <ChartAxisTitle>
-                      <Caption>Meses</Caption>
+                      <Caption>Productos</Caption>
                       <Style>
                         <FontSize>9pt</FontSize>
                         <Color>#5c5c5c</Color>
@@ -431,9 +442,9 @@
               </Style>
             </ChartNoDataMessage>
             <DataSetName>DatosRecaudacion</DataSetName>
-            <Top>2.39046cm</Top>
-            <Height>15.60954cm</Height>
-            <Width>18cm</Width>
+            <Top>2.18433cm</Top>
+            <Height>13.85445cm</Height>
+            <Width>17.145cm</Width>
             <ZIndex>2</ZIndex>
             <Style>
               <Border>
@@ -451,11 +462,23 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Recaudación mensual en el año </Value>
+                    <Value>Recaudacion de los 10 productos que más recaudaron en el mes </Value>
+                    <Style />
+                  </TextRun>
+                  <TextRun>
+                    <Value>=Parameters!Mes.Value</Value>
+                    <Style />
+                  </TextRun>
+                  <TextRun>
+                    <Value> del año </Value>
                     <Style />
                   </TextRun>
                   <TextRun>
                     <Value>=Parameters!Anio.Value</Value>
+                    <Style />
+                  </TextRun>
+                  <TextRun>
+                    <Value>.</Value>
                     <Style />
                   </TextRun>
                 </TextRuns>
@@ -463,9 +486,9 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox2</rd:DefaultName>
-            <Top>1.61407cm</Top>
+            <Top>1.44321cm</Top>
             <Height>0.6cm</Height>
-            <Width>18cm</Width>
+            <Width>17.145cm</Width>
             <ZIndex>3</ZIndex>
             <Style>
               <Border>
@@ -481,10 +504,10 @@
         <Height>18cm</Height>
         <Style />
       </Body>
-      <Width>18cm</Width>
+      <Width>17.145cm</Width>
       <Page>
-        <PageHeight>18cm</PageHeight>
-        <PageWidth>12cm</PageWidth>
+        <PageHeight>29.7cm</PageHeight>
+        <PageWidth>21cm</PageWidth>
         <LeftMargin>2cm</LeftMargin>
         <RightMargin>2cm</RightMargin>
         <TopMargin>2cm</TopMargin>
@@ -499,6 +522,10 @@
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="Mes">
+      <DataType>String</DataType>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
@@ -510,9 +537,14 @@
           <RowIndex>0</RowIndex>
           <ParameterName>Anio</ParameterName>
         </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>1</ColumnIndex>
+          <RowIndex>0</RowIndex>
+          <ParameterName>Mes</ParameterName>
+        </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
   </ReportParametersLayout>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
-  <rd:ReportID>66448e25-5dba-42e6-928e-b389dd9a307f</rd:ReportID>
+  <rd:ReportID>6ee0a194-a0ee-4ea0-b817-afc219e4fa37</rd:ReportID>
 </Report>
